# patch-analyzer

./: .env  .gitignore  ARCHITECTURE.md  LICENSE  RANKS_STRUCTURE.md  README.md  RELEASE.md  RELEASE_INSTRUCTIONS.md  SETUP_UPDATES.md  create-beta-release.sh  gen-icon.js  index.html  latest-beta.json  package-lock.json  package.json  puuids.sql  release-data.json  riot.txt  tailwind.config.js  vite.config.ts
.github/: SETUP_SECRETS.md
.github/workflows/: release.yml
scripts/: copy-desktop-exe.mjs  rebuild-augment-overrides.ts
src/: App.tsx  i18n.ts  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/arch/: runesReforged.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: patch-analyzer.toml
src-tauri/resources/: manifest.json
src-tauri/src/: analyzer.rs  asset_cache.rs  db.rs  game_assets.rs  lib.rs  main.rs  models.rs  patch_change_trend.rs  patch_icons.rs  patch_version.rs  scraper.rs  supabase.rs  supabase_client.rs  wiki_augment_bundle.rs  wiki_embed.rs  youtube_data_api.rs  youtube_feed.rs
src/components/: error-boundary.tsx  settings-controls.tsx  skin-spotlight-embed.tsx  startup-route.tsx  youtube-channel-panel.tsx
src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  dropdown-menu.tsx  input.tsx  label.tsx  progress.tsx  sheet.tsx
src/data/: augment_ru_aliases.json  augments-bundled.json  augments-ru-overrides.json
src/hooks/: use-youtube-feed.ts
src/lib/: app-preferences.ts  catalog-from-tauri.ts  format-date.ts  patch-utils.ts  utils.ts  wiki-augment-plain.ts  wiki-embed.ts  youtube-channels.ts  youtube-match.ts
src/locales/: en.json  ru.json
src/pages/: augments-page.tsx  community-page.tsx  settings-page.tsx
src/types/: bundled-augments.ts  mayhem.ts  patch.ts  youtube.ts
