[package]
name = "lol-meta-analyzer"
version = "0.1.0"
description = "League of Legends Patch Analyzer"
authors = ["you"]
edition = "2021"

[lib]
name = "lol_meta_analyzer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon", "image-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking", "cookies"] }
scraper = "0.19"
# Включаем chrono фичу для sqlx
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "sqlite", "chrono"] } 
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
# Включаем serde фичу для chrono
chrono = { version = "0.4", features = ["serde"] } 
regex = "1.10"
