[package]
name = "lol-meta-analyzer"
version = "1.0.3"
description = "League of Legends Patch Analyzer"
authors = ["you"]
edition = "2021"
default-run = "lol-meta-analyzer"

[lib]
name = "lol_meta_analyzer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "wiki_augment_fetch"
path = "src/bin/wiki_augment_fetch.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["protocol-asset", "tray-icon", "image-png", "unstable"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking", "cookies"] }
scraper = "0.19"
# Включаем chrono фичу для sqlx
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "sqlite", "chrono"] } 
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
# Включаем serde фичу для chrono
chrono = { version = "0.4", features = ["serde"] } 
regex = "1.10"
tauri-plugin-window-state = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
